@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed an issuse with trains when inserting a stage before the stage a train is in.
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.2
 Date: 2025-09-27
